@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* Fix incompatibilities in pinspect portageq api that eselect uses.
+  Eselect will be updated to use better api's moving forward, but
+  till then restore support.
+
 * pinspect portageq and pinspect query envvar now return space delimited
   string values if the queried value was a list.
 
